fix: z-index CurriculumPage

--- a/client/src/components/Curriculum/CurriculumHeader/CurriculumHeader.css
+++ b/client/src/components/Curriculum/CurriculumHeader/CurriculumHeader.css
@@ -6,7 +6,7 @@
     background-position: center center;
     color: #fff;
     position: sticky;
-    z-index: -1;
+    z-index: 0;
 }
 
 .logo{
